# exydata-cli

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  setup.cfg  voltmetrix.py
.github/workflows/: build-and-release.yml  build_binary.yml
linux/: README.md  voltmetrix.py
linux/src/voltmetrix-cli/: voltmetrix.py
mac/: exy.py  voltmetrix.py
src/voltmetrix-cli/: voltmetrix.py
windows/: setup.cfg  voltmetrix.py
windows/linux/: voltmetrix.py
