[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltmetrix-cli"
version = "0.0.1"
authors = [
  { name="Ignacio Van Droogenbroeck", email="support@voltmetrix.com" },
]
description = "A package that contains utilities that data engineers use."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/volmetrixdotcom/cli"
"Bug Tracker" = "https://github.com/volmetrixdotcom/cli/issues"
