[metadata]
name = voltmetrix
description = Voltmetrix help to developers, engineers and data scientists to get more of their metrics in less time. Avoiding the need of mantain infrastructure to store and visualize metrics.
long_description_content_type = text/markdown
url = https://github.com/volmetrixdotcom/cli
project_urls =
    Bug Tracker = https://github.com/volmetrixdotcom/cli/issues
    Changelog = https://github.com/volmetrixdotcom/cli/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
